[package]
name = "runner_q"
version = "0.4.3"
edition = "2021"
authors = ["Akinlua Bolamigbe bolamigbeakinlua@gmail.com"]
description = "Redis-based activity queue and worker system"
license = "MIT"
repository = "https://github.com/alob-mtc/runnerq"
homepage = "https://github.com/alob-mtc/runnerq"
readme = "README.md"
keywords = ["queue", "redis", "worker", "async", "background-jobs"]
categories = ["asynchronous", "database", "concurrency"]

[dependencies]
async-trait = "0.1.89"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
bb8-redis = "0.14"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
serde_json = "1.0.143"
chrono = { version = "0.4.41", features = ["serde"] }
thiserror = "2.0.16"
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tokio-util = "0.7.16"
